deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: localhost:5000/clickerclass-apigateway
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "350Mi"
              cpu: "150m"
            limits:
              memory: "700Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8090
