ingress.yml
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "api-gateway-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              serviceName: "api-gateway-service"
              servicePort: 8090
